tests/machine/x/pl/group_by.error
run: exit status 2
ERROR: /workspace/mochi/tests/machine/x/pl/group_by.pl:8: user:main Type error: `integer' expected, found `key' (an atom)

